--- a/src/static/html/admin.html
+++ b/src/static/html/admin.html
@@ -1,19 +1,29 @@
-﻿<!DOCTYPE html>
+<!--Template from the Programmable Web Project example:
+    https://lovelace.oulu.fi/ohjelmoitava-web/ohjelmoitava-web/exercise-4-implementing-hypermedia-clients/#server-side-preparations
+    -->
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="/static/css/admin.css">
-    <title>Sensorhub admin site</title>
+    <title>Project manager admin site</title>
     <script type="text/javascript" src="/static/scripts/jquery.js"></script>
     <script type="text/javascript" src="/static/scripts/admin.js"></script>
 </head>
 
-<body> 
+<body>
+    <h1>Project management</h1>
+    <h3>Add new project</h3>
+
     <div class="notification"></div>
     <div class="navigation"></div>
-    <div class="contents", id="content">
-        <div class="tablecontrols"></div>
-        <div class="tablecontents">
+    <div class="contents" id="content">
+        <div class="tablecontrols" id="tblctrl"></div>
+        <div class="tablecontents" . id="tablecontents">
+            <div class="form" , id="form">
+            </div>
+            <h3>Projects</h3>
             <table class="resulttable" , id="myTable1">
                 <thead>
                 </thead>
@@ -21,9 +31,18 @@
                 </tbody>
             </table>
         </div>
-        <div class="tablecontrols"></div>
-    </div>
-    <div class="form", id="form">
+        <div class="tablecontrols2" id="tblctrl2"></div>
+        <div class="memberdiv" , id="memberdiv">
+            <div class="memberform" id="memberform">
+            </div>
+            <h3>Members</h3>
+            <table class="membertable" id="membertable">
+                <thead>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
     </div>
 </body>
 
