--- a/src/static/html/admin.html
+++ b/src/static/html/admin.html
@@ -14,17 +14,18 @@
 
 <body>
     <h1>Project management</h1>
-    <h3>Add new project</h3>
-
+    <h3 id="add-project">Add new project</h3>
+    <h3 id="add-member">Add new member</h3>
+    <br />
     <div class="notification"></div>
     <div class="navigation"></div>
     <div class="contents" id="content">
         <div class="tablecontrols" id="tblctrl"></div>
-        <div class="tablecontents" . id="tablecontents">
-            <div class="form" , id="form">
+        <div class="tablecontents" id="tablecontents">
+            <div class="form" id="form">
             </div>
-            <h3>Projects</h3>
-            <table class="resulttable" , id="myTable1">
+            <h3 id="projects">Projects</h3>
+            <table class="resulttable" id="myTable1">
                 <thead>
                 </thead>
                 <tbody>
@@ -32,11 +33,25 @@
             </table>
         </div>
         <div class="tablecontrols2" id="tblctrl2"></div>
-        <div class="memberdiv" , id="memberdiv">
+        <div class="memberdiv" id="memberdiv">
             <div class="memberform" id="memberform">
             </div>
-            <h3>Members</h3>
+            <h3 id="members">Members</h3>
             <table class="membertable" id="membertable">
+                <thead>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+        <div class="tablecontrols3" id="tblctrl3"></div>
+        <div class="phase" id="phasediv">
+            <h3 id="add-phase">Add new phase</h3>
+            <div class="phaseform" id="phaseform">
+            </div>
+            <div class="phases-notification"></div>
+            <h3 id="phases">Project phases</h3>
+            <table class="phasetable" id="phasetable">
                 <thead>
                 </thead>
                 <tbody>
